dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-api
spec:
  selector:
    matchLabels:
      app: dev-api
  replicas: 3
  template:
    metadata:
      labels:
        app: dev-api
    spec:
      hostNetwork: true
      containers:
        - name: dev-api
          image: danielneset/idata2306dev:dev-b68bfb933b38f407a8d6af42b6597352a4a55d99
          ports:
            - containerPort: 8080
              protocol: TCP
