dev/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-web
spec:
  selector:
    matchLabels:
      app: dev-web
  replicas: 3
  template:
    metadata:
      labels:
        app: dev-web
    spec:
      containers:
        - name: dev-web
          image: danielneset/idata2301dev:dev-web-ad214dc6886cc6289dba1c69b1667158152e679a
          ports:
            - containerPort: 3000
              protocol: TCP
