dev/mysqLocalService.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-db
spec:
  type: ExternalName
  externalName: 127.0.0.1
  ports:
    - name: mysql
      port: 3306
