dev/mysqlEndpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-db
subsets:
  - addresses:
      - ip: "192.168.0.207"
    ports:
      - port: 3306
