dev/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-web-service
spec:
  selector:
    app: dev-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
