dev/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dev-frontend
  #annotations:
  #  nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: dev.flightfinder.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-web-service
                port:
                  number: 3000
